# meta-trading

./: pyproject.toml
meta/: main.py  mt5_class.py
