[tool.poetry]
name = "meta"
version = "0.1.0"
description = ""
authors = ["otavius  <developer.otavius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
metatrader5 = "^5.0.4874"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
